# cse160-opencl

./: .gitignore  README.md
.devcontainer/cpu-arm64/: devcontainer.json
.devcontainer/cpu-x86_64/: devcontainer.json
.devcontainer/gpu-cuda/: devcontainer.json
.devcontainer/gpu-intel-linux/: devcontainer.json
.devcontainer/gpu-intel-windows/: devcontainer.json
PA1/device_query/: Makefile  README.md  main.c
PA1/raytracer_parallel/: .gitignore  Makefile  kernel.cl  main.c  opencl_setup.c  (+1 more)
PA2/: .gitignore  Makefile  kernel.cl  main.c  vector_add_2.cl  vector_add_2_coarsened.cl  vector_add_4.cl
PA3/: .gitignore  0_matmul.cl  1_coarsened_matmul.cl  2_optional_matmul.cl  Makefile  main.c
PA4/: main.c
PA5/: Makefile  kernel.cl  main.c
PA6/: .gitignore  Makefile  Readme.md  inferance_bird.py  inferance_gpt2.py  inferance_resnet.py  pyproject.toml  setup.py  simple_sanity_check.py  test.py
PA6/Dataset/audio/selected_bird_datasets/: data-00000-of-00001.arrow  dataset_info.json  state.json
PA6/Dataset/image/: images.py
PA6/cnn/: Makefile  Readme.md
PA6/cnn/src/layer/custom/: new-forward-kernel.cl
PA6/extras/: subset_audio.py  train_audio.py
PA6/opencl_functions/: conv2d.cl  ocl_wrapper_torch.cpp  opencl-functions.cpp  opencl-functions.hpp
PA6/utils/: select_device.py
PA8/: .gitignore  Makefile  ece408net.cc  ece408net.h  inferance_gpt2.py  pyproject.toml  setup.py  simple_sanity_check.py  softmax.py  test.py
helper_lib/: device.c  img.c  img.h  matrix.c
utils/: gpu.py  intercept_layer_prof.py  nvprof.py  prof_base.py  profile.py
(+63 files in other folders)
