[build-system]
requires = ["setuptools>=45", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "PA6"
version = "0.1.0"
description = "Builder for Pytorch and Custom CL intergration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[tool.setuptools]
packages = ["opencl_functions"]
